# pytrustplatform

./: CHANGELOG.md  MANIFEST.in  README.md  pylintrc  pypi.md  pyproject.toml  requirements.txt  setup.py
doc/source/: conf.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pytrustplatform.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  pytrustplatform.rst.txt
pytrustplatform/: __init__.py  ca_create.py  cert_get_data.py  cli_certificate_main.py  cli_manifest_main.py  cli_pytrust.py  compressed_cert_decoder.py  device_cert_builder.py  ecc_cert_builder.py  ecc_conversions.py  ecc_types.py  logfilters.py  logging.yaml  pytrust_errors.py  serialnumber.py  status_codes.py  verification_cert_builder.py  version.py
pytrustplatform/certs/: template_device.csr
pytrustplatform/certs/ATECC608A-MAH1H/: device.crt
pytrustplatform/certs/ATECC608A-MAH4I/: device_template.crt  signer_2C10.crt
pytrustplatform/certs/ATECC608B-TNGTLS/: device_template.crt
pytrustplatform/certs/RootCA/: ATECC Root CA 001.crt
pytrustplatform/manifest/: data_provider.py  manifest.py  manifest_functions.py
pytrustplatform/manifest/mchp_manifest_signers/: MCHP_manifest_signer_1_Jan2019_July2019.crt
pytrustplatform/tests/: readme.md  test_ca_create.py  test_cert_get_data.py  test_cli_certificate.py  test_device_cert_builder.py  test_manifest_tool.py  test_verification_cert_builder.py
pytrustplatform/tests/data/: dummy_cert.crt  dummy_cert.py  dummy_signer-ca.crt  dummy_signer-ca.key  manifest_ATECC608A-MAH4I.json
pytrustplatform/tests/output/device_cert_builder_test_output/: build_cert_generated_device.csr  generated_device.crt
pytrustplatform/tests/output/manifest_tool_output/: Crypto Authentication Signer 2C00.cer  Crypto Authentication Signer 2C10.cer  manifest.json  sn01230390B3D1450C01.cer  sn0123D26E26E688C901.cer
pytrustplatform/tests/output/test_ecc_cert_output_files/: device_ecc608.crt  signer_ecc608.crt
pytrustplatform/tests/output/verification_cert_builder_test_output/: generated_verification.crt
